# ckanext-statistics

./: .gitignore  .travis.yml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  test.ini
.github/: PULL_REQUEST_TEMPLATE.md  SUPPORT.md
.github/workflows/: main.yml  tests.yml
ckanext/: __init__.py
ckanext/statistics/: __init__.py  cli.py  lib.py  plugin.py
ckanext/statistics/commands/: __init__.py  statistics.py  stats.py
ckanext/statistics/data/: data-portal-backfill.json
ckanext/statistics/lib/: __init__.py  dataset_statistics.py  download_statistics.py  gbif_api.py  helpers.py  statistics.py
ckanext/statistics/logic/: action.py  auth.py  schema.py
ckanext/statistics/migration/statistics/: alembic.ini
ckanext/statistics/migration/statistics/versions/: 1d68ab53e0bb_initialisation.py
ckanext/statistics/model/: __init__.py  ckanpackager.py  datastore.py  gbif_download.py
ckanext/statistics/tests/: __init__.py  test_download_statistics.py
ckanext/stats/: plugin.py
ckanext/stats/logic/: __init__.py
docker/: Dockerfile
docs/: index.md
docs/_scripts/: gen_api_pages.py
tests/: test_download_statistics.py  test_gbif_api.py
