[project]
name = "ckanext-statistics"
version = "3.1.15"
description = "A CKAN extension for accessing instance statistics."
readme = "README.md"
requires-python = ">=3.6"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Natural History Museum", email = "data@nhm.ac.uk" }
]
keywords = ["CKAN", "data", "statistics"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8"
]
dependencies = [
    "importlib-resources",
    "requests",
    "tqdm>=4.55.1",
    "ckanext-versioned-datastore>=5.1.0",
    "ckantools>=0.4.2"
]

[project.optional-dependencies]
test = [
    "mock",
    "pytest>=4.6.5",
    "pytest-cov>=2.7.1",
    "coveralls"
]

[project.urls]
repository = "https://github.com/NaturalHistoryMuseum/ckanext-statistics"
changelog = "https://github.com/NaturalHistoryMuseum/ckanext-statistics/blob/main/CHANGELOG.md"

[project.entry-points."ckan.plugins"]
statistics = "ckanext.statistics.plugin:StatisticsPlugin"


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[tool]
[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
exclude = ["tests", "docs"]

[tool.setuptools.package-data]
"ckanext.statistics.data" = ["*", "**/*"]
"ckanext.statistics.theme" = ["*", "**/*"]

[tool.commitizen]
name = "cz_nhm"
version = "3.1.15"
tag_format = "v$version"
update_changelog_on_bump = true
changelog_incremental = true
version_files = [
    "pyproject.toml:version",
    "CITATION.cff:^version"
]

[tool.ruff]
target-version = "py38"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "D"
]
ignore = [
    "D100",
    "D104",
    "D200",
    "D202",
    "D203",
    "D205",
    "D206",
    "D212",
    "D300",
    "D401",
    "E111",
    "E114",
    "E117"
]

[tool.docformatter]
wrap-summaries = 88
wrap-descriptions = 88
pre-summary-newline = true
make-summary-multi-line = true
